# agent-paper-reviewers

./: .gitignore  OUTPUT_FILES.en.md  OUTPUT_FILES.zh.md  README.en.md  README.md  README.zh.md  pyproject.toml
agent-paper-reviewers-skill/: SKILL.md  flow_config.yaml  manifest.json
agent_paper_reviewers/: __init__.py  cli.py  models.py  orchestrator.py
docs/: output-schema.json  product-spec.md
envs/: environment.cpu.yml  environment.gpu.yml  gpu-linux-extras.md
examples/: meta_review_input.template.json  meta_review_sample_input.json  pdf_input.template.json  pdf_test_input.json  rerun_user_pdf_input.json  sample_input.json  sample_paper.md  sql_translation_gpu_input.json  venue_recommend_input.json  venue_recommend_paper.md
requirements-lock/: README.md  cpu-freeze.txt  gpu-freeze.txt
reviewers-sim-skill/: SKILL.md  flow_config.yaml
reviewers_sim/: __init__.py  cli.py  models.py  orchestrator.py
tests/: test_ai_summary.py  test_citation_graph_and_gap.py  test_claim_discoverer_and_parser_quality.py  test_claim_normalizer_executor_first.py  test_cli_doctor.py  test_cli_feedback.py  test_diagnosis_fix_actions_specificity.py  test_diagnosis_report_richness.py  test_executor_backends.py  test_executor_first_fallback_pipeline.py  test_feedback_loop.py  test_full_pipeline.py  test_historical_profile.py  test_language_outputs.py  test_manuscript_stage_strategy.py  test_mcp_openreview_policy.py  test_openreview_policy.py  test_paper_qa_gate.py  test_pdf_fallback.py  test_pipeline_real_steps.py  test_pipeline_smoke.py  test_rebuttal_composer_executor.py  (+20 more)
(+93 files in other folders)
